# www.roskakori.at

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  conf.py  pyproject.toml  requirements.txt  www.roskakori.at.lektorproject
.github/workflows/: deploy.yaml
assets/static/: style.css
content/: contents+de.lr  contents.lr  robots.txt
content/about/: contents.lr
content/blog/analyzing-natural-language-feedback-using-python/: contents.lr
content/blog/django-meets-flutter/: contents.lr
content/blog/django-search-example/: contents.lr
content/blog/german-introduction-to-natural-language-processing-with-python/: contents.lr
content/blog/helpful-logging-with-java/: contents.lr
content/blog/helpful-logging-with-python/: contents.lr
content/blog/introduction-to-pygments/: contents.lr
content/blog/monitoring-django-applications-with-logstash/: contents.lr
content/blog/multiple-django-applications-on-a-single-server-with-nginx/: contents.lr
content/blog/python-instead-of-shell-scripts/: contents.lr
content/blog/unicode-survival-kit/: contents.lr
content/contact/: contents.lr
content/data-protection/: contents.lr
content/donate/: contents.lr
content/donate/donate-python-ebcdic/: contents.lr
content/guidelines/: contents.lr
content/legal-information/: contents+de.lr  contents.lr
content/privacy-statement/: contents.lr
content/projects/: contents.lr
content/publications/: contents.lr
models/: blog-post.ini  page.ini
scripts/: build_to_tmp.py  build_to_tmp.sh  deploy.sh  run_server.sh  setup_project.sh  update_dependencies.sh
templates/: layout.html
templates/macros/: blog.html
(+46 files in other folders)
