[tool.poetry]
name = "www.roskakori.at"
version = "0.1.0"
description = ""
authors = ["Thomas Aglassinger <roskakori@users.sourceforge.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Lektor = "^3.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

