[tool.poetry]
name = "www.roskakori.at"
version = "1.0.0"
description = ""
authors = ["Thomas Aglassinger <roskakori@users.sourceforge.net>"]

[tool.poetry.dependencies]
python = "^3.10"
Lektor = "^3"
pre-commit = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
