[project]
name = "www.roskakori.at"
version = "1.0.0"
description = "Personal web site of Thomas Aglassinger"
authors = [{ name = "Thomas Aglassinger", email = "roskakori@users.sourceforge.net" }]
requires-python = ">=3.12,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Lektor>=3,<4",
    "pre-commit>=4.5.1,<5",
]

[project.scripts]
build_to_tmp = "scripts.build_to_tmp:main"

[dependency-groups]
dev = []

[tool.uv.build-backend]
module-name = "scripts"
module-root = ""

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
